--- a/pom.xml
+++ b/pom.xml
@@ -10,14 +10,14 @@
 
 	<properties>
 		<spring.version>4.1.7.RELEASE</spring.version>
-		<junit.version>3.8.1</junit.version>
+		<junit.version>4.11</junit.version>
 	</properties>
 
 	<dependencies>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>3.8.1</version>
+			<version>${junit.version}</version>
 			<scope>test</scope>
 		</dependency>
 		
@@ -33,6 +33,13 @@
 			<artifactId>spring-core</artifactId>
 			<version>${spring.version}</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+			<version>4.0.5.RELEASE</version>
+			<scope>test</scope>
+		</dependency>		
 
 		<dependency>
 			<groupId>org.springframework</groupId>
